Maintenance/1.0.0/css/Diagnostic.css
.Diagnostics {
   position       : absolute;
   -moz-box-sizing: border-box;
   box-sizing     : border-box;
   bottom         : 0;
   right          : 0;
   left           : 0;
   top            : 0;
}

.Diagnostics__layout {
   min-width : 1024px;
   text-align: center;
   height    : -webkit-calc(100% - 48px);
   height    : calc(100% - 48px);
}

.Diagnostics__body {
   width          : 1024px;
   height         : 100%;
   -moz-box-sizing: border-box;
   box-sizing     : border-box;
   padding-top    : 130px;
   padding-right  : 70px;
   padding-left   : 70px;
   bottom         : 0;
}

.Diagnostics__image {
   float : left;
   height: 300px;
   width : 300px;
}

.Diagnostics__content {
   margin-left: 20px;
}

.Diagnostics__content-header span {
   line-height: 32px;
   font-weight: 400;
   font-size  : 32px;
   color      : #000;
}

.Diagnostics__content-subheader span {
   line-height: normal;
   font-weight: 700;
   font-size  : 18px;
   color      : #313E78;
}

.Diagnostics__content-header,
.Diagnostics__content-subheader,
.Diagnostics__content-message,
.Diagnostics__content-action {
   padding-bottom: 20px;
}

.Diagnostics__content-message,
.Diagnostics__content-action {
   padding-left: 20px;
}

.Diagnostics__content-message p {
   font-weight: 400;
   font-size  : 16px;
   color      : #999;
}

.Diagnostics__head-tooltip {
   position: absolute;
   top     : 0;
   right   : 10px;
   width   : 20px;
}

.Diagnostics__bottom-tooltip {
   position: absolute;
   bottom  : 0;
   left    : 10px;
   width   : 20px;
}

.Diagnostics__infobox {
   max-width: 175px;
}

